<resources>
    <string name="app_name">Diary</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Surbhi Mayank</string>
    <string name="nav_header_subtitle">surbhimayank1@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_notes">Notes</string>
    <string name="menu_addNotes">Add Notes</string>
    <string name="menu_sync">Sync Notes</string>
    <string name="menu_reminder">Reminders</string>
    <string name="menu_rating">Rate App</string>
    <string name="menu_shareApp">Share App</string>
    <string name="menu_logout">Logout</string>
    <string name="diary">Diary</string>
    <string name="text">A collection of notes from your life.</string>
    <string name="title_activity_node_details">NodeDetails</string>
    <string name="title_activity_note_details">NoteDetails</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="Image">image</string>
    <string name="Add_url">Add Url</string>
    <string name="title_activity_write_notes">WriteNotes</string>
    <string name="enter_url">Enter URL</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repetition_interval">Repetition Interval</string>
    <string name="type_of_repetition">Type of Repetition</string>
    <string name="title">Title</string>
    <string name="date_and_time">Date and Time</string>
    <string name="repeat_no_and_type">Repeat No and Type</string>
    <string name="discard_reminder">Discard Reminder</string>
    <string name="save_reminder">Save Reminder</string>
    <string name="reminder_title">AlarmReminder</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="share">Share</string>
</resources>
