<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="86dp">

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerVertical="true"
        android:id="@+id/thumbnail_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:padding="4dp"
        android:layout_marginBottom="4dp"
        android:layout_toRightOf="@+id/thumbnail_image"
        android:layout_toLeftOf="@+id/active_image"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_title"
            android:ellipsize="end"
            android:maxLines="2"
            android:text="@string/title"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_date_time"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="15dp"
            android:text="@string/date_and_time"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_repeat_info"
            android:ellipsize="marquee"
            android:singleLine="true"
            android:textSize="15dp"
            android:text="@string/repeat_no_and_type"/>

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:srcCompat="@drawable/ic_notifications_off_black_24dp"
        android:layout_centerVertical="true"
        android:id="@+id/active_image"/>

</RelativeLayout>