<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddReminder">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAdd"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/addReminder_layoutTop"
        android:layout_width="match_parent"
        android:layout_height="148dp"
        android:layout_marginTop="80dp"
        android:background="@color/darkblue"
        android:orientation="vertical"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="NotSibling">

        <EditText
            android:id="@+id/reminderTitle"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginLeft="72dp"
            android:layout_marginRight="16dp"
            android:gravity="top|left"
            android:hint="Reminder"
            android:inputType="textCapWords|textMultiLine"
            android:lines="4"
            android:minLines="4"
            android:scrollHorizontally="false"
            android:textColor="@color/whiteColor"
            android:textColorHint="@color/whiteColor"
            android:textSize="25dp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/addReminder_layoutTop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:layout_marginTop="8dp"
                android:text="@string/details"
                android:id="@+id/details"
                android:textSize="18dp"
                android:gravity="center_vertical"
                android:layout_marginLeft="72dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:onClick="setDate"
                android:id="@+id/date"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_view_day_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/date_Icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/date_Icon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/dateText"
                        android:textSize="18dp"
                        android:text="Date"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/set_date"
                        android:textSize="16dp"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:onClick="setTime"
                android:id="@+id/time"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/time_icon" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/time_icon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/timeText"
                        android:textSize="18dp"
                        android:text="@string/time"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/set_time"
                        android:textSize="16dp"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:id="@+id/repeat">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_sync_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/repeat_icon" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/repeat_ll"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_icon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/repeatText"
                        android:textSize="18dp"
                        android:text="@string/repeat"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/set_repeat"
                        android:textSize="16dp"/>

                </LinearLayout>

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:id="@+id/repeat_switch"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="16dp"
                    android:layout_marginLeft="8dp"
                    android:onClick="onSwitchRepeat"
                    android:checked="true"
                    android:textOn="On"
                    android:textOff="Off"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:onClick="setRepeatNo"
                android:id="@+id/RepeatNo"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_unfold_more_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/repeat_no_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_no_icon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/repeatNoText"
                        android:textSize="18dp"
                        android:text="@string/repetition_interval"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/set_repeat_no"
                        android:textSize="16dp"/>

                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="72dp"
                android:clickable="true"
                android:onClick="selectRepeatType"
                android:id="@+id/repeatType"
                android:background="?android:attr/selectableItemBackground">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_subject_black_24dp"
                    android:layout_alignParentLeft="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="32dp"
                    android:layout_centerVertical="true"
                    android:id="@+id/repeat_type_icon" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@id/repeat_type_icon">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/repeatTypeText"
                        android:textSize="18dp"
                        android:text="@string/type_of_repetition"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/set_repeat_type"
                        android:textSize="16dp"/>

                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/addReminder_layoutTop"
        android:background="@drawable/toolbar_dropshadow"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/starred1"
        android:clickable="true"
        android:onClick="selectFab1"
        app:fab_colorNormal="@color/colorAccent"
        app:srcCompat="@drawable/ic_notifications_off_black_24dp"
        app:fabSize="normal"
        app:fab_colorPressed="@color/fab_pressed"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="188dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/starred2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:onClick="selectFab2"
        app:fab_colorPressed="@color/fab_pressed"
        app:srcCompat="@drawable/ic_notifications_active_black_24dp"
        app:fab_size="normal"
        app:fab_colorNormal="@color/colorAccent"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="188dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="8dp"/>

</RelativeLayout>